--- a/static/sass/components/_component.header.scss
+++ b/static/sass/components/_component.header.scss
@@ -38,9 +38,9 @@
     top: 0;
     width: 100%;
     max-width: 470px;
-    background-color: $blue_sh1;
+    background-color: var(--main-color);
     height: 100%;
-    z-index: 99999;
+    z-index: 999999;
     @include box-shadow(3px 2px 13px 0 rgba(0, 0, 0, 0.3));
     -webkit-transform: translate3d(-100%, 0, 0);
     -moz-transition: translate3d(-100%, 0, 0);
