--- a/page.twig
+++ b/page.twig
@@ -17,7 +17,7 @@
                             <a href="{{page.editUrl}}" target="_blank">Edit</a>
                         {% endif %}
 
-                        <div class="content_area is-wrapper clearfix page-content c-article__container">
+                        <div class="content_area is-wrapper page-content c-article__container">
                             {{page.content | raw}}
                         </div>
                         {% if config['forms'][this.title] is defined %}
