--- a/partials/_single-article.twig
+++ b/partials/_single-article.twig
@@ -164,8 +164,9 @@
         {% set newWindow = true %}
     {% endif %}
 
-    {% if url.path == 'real-estate' %}
+    {% if url.path == '/real-estate' %}
         {% set newWindow = false %}
+        {{newWindow}}
     {% endif %}
 
     {% if amp == true %}
