--- a/static/sass/components/_component.header.scss
+++ b/static/sass/components/_component.header.scss
@@ -9,7 +9,14 @@
 
     &__logo {
         &-item {
+            margin: 0 20px;
             display: block;
+            @media #{$tablet} {
+                max-width: 280px;
+            }
+            @media #{$mobile}{
+                max-width: 240px;
+            }
         }
     }
 }
@@ -117,6 +124,10 @@
         &__form {
             width: 100%;
             margin: 0 20px 0 70px;
+
+            @media #{$mobile}{
+                margin: 0 20px 0 20px; 
+            }
         }
 
         &__input {
