--- a/section-digital.twig
+++ b/section-digital.twig
@@ -48,7 +48,7 @@
                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
             </div>
             {% for i in 1..6 if articles[articleCount] %}
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     {{this.render('partials/_single-article.twig', {
                         article: articles[articleCount], 
                         position: (articleCount+1),
@@ -68,7 +68,7 @@
                 {% endif %}
                 <div class="row">
                     {% for i in 7..14 if articles[articleCount] %}
-                        <div class="col-12 col-lg-3">
+                        <div class="col-12 col-md-6 col-lg-3">
                             {{this.render('partials/_single-article.twig', {
                                 article: articles[articleCount], 
                                 position: (articleCount+1),
