--- a/section.twig
+++ b/section.twig
@@ -50,45 +50,69 @@
                             }) | raw}}
                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                         </div>
-                        <div class="col-12 col-lg-6 left-border">
+                        <div class="col-12 col-lg-6 left-border section_1_firstVertical">
                             <div class="row">
-                                <div class="col-12 col-md-6 left-border section-page-genricTabView">
-                                    {% for i in 1..2 if articles[articleCount] %}
-                                        {{this.render('partials/_single-article.twig', {
-                                            article: articles[articleCount], 
-                                            position: (articleCount+1),
-                                            imageSize: {width: 600, height: 300},
-                                            containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription card--verticalMulti"
-                                        }) | raw}}
-                                        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
-                                    {% endfor %}
-
-                                    {{this.render('partials/_single-article.twig', {
-                                        article: articles[articleCount], 
-                                        position: (articleCount+1),
-                                        imageSize: {width: 600, height: 300},
-                                        containerClass: "card-1-mobile card-1-tablet card-1-desktop card--verticalMulti"
-                                    }) | raw}}
-                                    {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                                <div class="col-12 col-lg-6 left-border section-page-genricTabView">
+                                    <div class="row">
+                                        <div class="col-12 col-md-6 col-lg-12">
+                                            {{this.render('partials/_single-article.twig', {
+                                                article: articles[articleCount], 
+                                                position: (articleCount+1),
+                                                imageSize: {width: 306, height: 185},
+                                                containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription"
+                                            }) | raw}}
+                                            {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                                        </div>
+                                        <div class="col-12 col-md-6 col-lg-12">
+                                            {{this.render('partials/_single-article.twig', {
+                                                article: articles[articleCount], 
+                                                position: (articleCount+1),
+                                                imageSize: {width: 306, height: 185},
+                                                containerClass: "card-2-mobile card-2-tablet card-4-desktop card-withoutImage"
+                                            }) | raw}}
+                                            {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                                        </div>
+                                        <div class="col-12 col-md-6 col-lg-12">
+                                            {{this.render('partials/_single-article.twig', {
+                                                article: articles[articleCount], 
+                                                position: (articleCount+1),
+                                                imageSize: {width: 600, height: 300},
+                                                containerClass: "card-1-mobile card-1-tablet card-1-desktop"
+                                            }) | raw}}
+                                            {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-6 left-border section-page-genricTabView">
-                                    {% for i in 4..5 if articles[articleCount] %}
-                                        {{this.render('partials/_single-article.twig', {
-                                            article: articles[articleCount], 
-                                            position: (articleCount+1),
-                                            imageSize: {width: 600, height: 300},
-                                            containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription card--verticalMulti"
-                                        }) | raw}}
-                                        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
-                                    {% endfor %}
-
-                                    {{this.render('partials/_single-article.twig', {
-                                        article: articles[articleCount], 
-                                        position: (articleCount+1),
-                                        imageSize: {width: 600, height: 300},
-                                        containerClass: "card-1-mobile card-1-tablet card-1-desktop card--verticalMulti"
-                                    }) | raw}}
-                                    {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                                <div class="col-12 col-lg-6 left-border section-page-genricTabView">
+                                    <div class="row">
+                                        <div class="col-12 col-md-6 col-lg-12">
+                                            {{this.render('partials/_single-article.twig', {
+                                                article: articles[articleCount], 
+                                                position: (articleCount+1),
+                                                imageSize: {width: 306, height: 185},
+                                                containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription"
+                                            }) | raw}}
+                                            {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                                        </div>
+                                        <div class="col-12 col-md-6 col-lg-12">
+                                            {{this.render('partials/_single-article.twig', {
+                                                article: articles[articleCount], 
+                                                position: (articleCount+1),
+                                                imageSize: {width: 306, height: 185},
+                                                containerClass: "card-2-mobile card-2-tablet card-4-desktop card-withoutImage"
+                                            }) | raw}}
+                                            {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                                        </div>
+                                        <div class="col-12 col-md-6 col-lg-12">
+                                            {{this.render('partials/_single-article.twig', {
+                                                article: articles[articleCount], 
+                                                position: (articleCount+1),
+                                                imageSize: {width: 600, height: 300},
+                                                containerClass: "card-1-mobile card-1-tablet card-1-desktop"
+                                            }) | raw}}
+                                            {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div> 
@@ -99,7 +123,7 @@
         <div class="row">
             <div class="col-12">
                 {% if config['inventory']['adSpace']['mrec'][0] is defined %}
-                    <div class="my-5">
+                    <div class="my-5 overflow-hidden">
                         <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][0]}}" data-adshape="mrec"></div>
                     </div>
                 {% endif %}
@@ -136,11 +160,26 @@
                 </div>
                 
                 {% if config['inventory']['adSpace']['mrec'][0] is defined %}
-                    <div class="my-5">
-                        <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][0]}}" data-adshape="mrec"></div>
+                    <div class="my-5 overflow-hidden">
+                        <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][0]}}" data-adshape="mrec" data-responsive="1"></div>
                     </div>
                 {% endif %}
             </div>
         </div>
     </div>
+    {% set theKeywords = '' %}
+    {% if article.keywords is defined and article.keywords != '' %}
+        {% set theKeywords = article.keywords %}
+    {% elseif blogInfo.keywords is defined and blogInfo.keywords != '' %}
+        {% set theKeywords = blogInfo.keywords %}
+    {% endif %}
+    <div class="j-keyword-cont" data-keywords="{{theKeywords}}"></div>
 </main>
+
+<script>
+    // main script is defered so event listener makes sure
+    // defered script is loaded before this runs
+    document.addEventListener("DOMContentLoaded", function(event) {
+        Acme.articleController = Acme.ArticleController();
+    });
+</script>
