--- a/partials/panels/section-00.twig
+++ b/partials/panels/section-00.twig
@@ -2,8 +2,8 @@
 {% set cardIndex = 0 %}
 
 <div class="row" data-section="00">
-    <div class="col">
-        <div class="c-cards-container c-cards-container-xs bottom-border hm-firstRow">
+    <div class="col hm-sec1">
+        <div class="c-cards-container c-cards-container-xs bottom-border hm-sec1_row_1 hm-firstRow">
             <div class="row">
                 {% for i in 0..3 if articles[articleCount] %}
 
@@ -21,9 +21,9 @@
             </div>
         </div>
 
-        <div class="c-cards-container c-cards-container-xs bottom-border">
+        <div class="c-cards-container c-cards-container-xs bottom-border hm-sec1_row_2">
             <div class="row">
-                <div class="col-12 col-lg-3 left-border">
+                <div class="col-12 col-lg-3 left-border hm-sec1_row_2_c1">
                     {% for i in 4..5 if articles[articleCount] %}
                         {{this.render('../_single-article.twig', {
                             article: articles[articleCount],
@@ -35,7 +35,7 @@
                         {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                     {% endfor %}
                 </div>
-                <div class="col-12 col-lg-6 left-border">
+                <div class="col-12 col-lg-6 left-border hm-sec1_row_2_c2">
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
@@ -45,7 +45,7 @@
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                 </div>
-                <div class="col-12 col-lg-3 left-border">
+                <div class="col-12 col-lg-3 left-border hm-sec1_row_2_c3">
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <div class="c-cards-container c-cards-container-xs bottom-border">
+        <div class="c-cards-container c-cards-container-xs bottom-border hm-sec1_row_3">
             <div class="row">
                 {% for i in 8..11 if articles[articleCount] %}
                 <div class="col-12 col-lg-3 left-border">
