--- a/static/sass/components/_component.section.scss
+++ b/static/sass/components/_component.section.scss
@@ -61,6 +61,12 @@
                             }
                         }
                     }
+                    .card-2-desktop {
+                        height: 100%;
+                        .card-infoo {
+                            height: 100%;
+                        }
+                    }
                 }
 
                 @media #{$tablet} {
