--- a/static/sass/cards/_card-2.scss
+++ b/static/sass/cards/_card-2.scss
@@ -68,13 +68,6 @@
             }
         }
     }
-    &-verticalMulti {
-        + .card-2-verticalMulti {
-            border-top: 1px solid $grey4;
-            padding-top: 15px;
-            margin-top: 15px;
-        }
-    }
 }
 .card-2-mobile {
     @media #{$mobile} {
@@ -107,19 +100,18 @@
     @media #{$desktop-up} {
         @include card-2-tablet-base();
         @include card-name("C2 desktop");
-
+        height: 100%;
+        .card-infoo {
+            height: 100%;
+        }
         .c-cards-view {
             border-bottom: none;
             padding-bottom: 0px;
             margin-bottom: 0px;
-            height: 322px;
+            
             &__media {
                 max-height: 185px;
                 min-height: 185px;
-            }
-
-            &__heading {
-                max-height: 60px;
             }
         }
     }
