--- a/static/sass/cards/_card-5.scss
+++ b/static/sass/cards/_card-5.scss
@@ -3,11 +3,16 @@
         .c-cards-view {
             @include flex-direction(column, vertical);
             min-height: 680px;
+            @include justify-content(flex-start);
             &__media {
                 min-height: 450px;
                 height: 450px;
                 margin-bottom: 15px;
                 overflow: hidden;
+            }
+
+            &__container, &__container-topSection {
+                flex: 1;
             }
 
             &__heading {
