--- a/partials/panels/section-04.twig
+++ b/partials/panels/section-04.twig
@@ -69,6 +69,8 @@
         </div>
     </div>
     {% if adslots[0] is defined %}
-    <div class="col-12 col-lg-3"></div>
+    <div class="col-12 col-lg-3">
+        <div class="j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
+    </div>
     {% endif %}
 </div>
