--- a/partials/panels/section-00.twig
+++ b/partials/panels/section-00.twig
@@ -55,6 +55,12 @@
                     timeSuppress: timeSuppress
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+
+                    {% if adslots[0] is defined %}
+                        <div class="col-12 col-xl-3 d-none d-xl-block">
+                            <div class="j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
